# QtConsoleLogger

./: .clang-format  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
src/: common.hpp  console.cpp  console.hpp  logger.cpp  logger.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  sinks.cpp  sinks.hpp
